# MultiBoot

./: ACTUAL_CURRENT_STATE.md  ARM_INSTALL_LOG.txt  ARM_INTEGRATION_PLAN.md  AUTO_REPAIR.sh  BOOT_ISSUES_AND_FIXES.md  BOOT_TIME_INTERNET_STRATEGY.md  BUILD_COMPLETE_ARCHIVE.sh  COMPLETE_UBUNTU_NOW.sh  COMPLETE_UBUNTU_SETUP.sh  COMPREHENSIVE_BOOT_TEST.sh  COMPREHENSIVE_COMPATIBILITY_TEST.sh  COMPREHENSIVE_DRIVER_EXPANSION.sh  COMPREHENSIVE_TEST_PLAN.sh  COMPREHENSIVE_VALIDATION.sh  CORRECTED_ARCHITECTURE.md  CURRENT_STATUS.md  DEBOOTSTRAP_UBUNTU.sh  EXTRACT_ALL_ARM.sh  FINAL_PERFECTION_CHECKLIST.md  FINAL_PUSH.md  FINAL_STATUS.md  FINAL_STATUS_BEFORE_TEST.md  FINAL_SYSTEM_PERFECTION.sh  FINAL_TEST_RESULTS.md  FIX_ALL_ERRORS.sh  FIX_OPENCORE.sh  FIX_WINDOWS_BCD.sh  HONEST_ASSESSMENT.md  HOW_IT_WORKS.md  INSTALL_ARM_BOOTCHAIN.sh  INSTALL_NOW.sh  INSTALL_NOW_SDE.sh  INSTALL_TO_DRIVE.py  INSTALL_UBUNTU_FINAL.sh  INSTALL_UNIVERSAL_V2.sh  INSTALL_UNIVERSAL_V2_FIXED.sh  M1_SUPPORT_PLAN.md  MULTIBOOT_UNIVERSAL.sh  PREDICTED_ISSUES.md  PRE_BOOT_CHECK_V2.sh  (+30 more)
AsahiRepos/binfmt-dispatcher-main/: .gitignore  .packit.yml  Cargo.toml  LICENSE  Makefile
AsahiRepos/binfmt-dispatcher-main/data/: binfmt-dispatcher-x86_64.conf  binfmt-dispatcher.toml
AsahiRepos_Complete/: download_all.sh
BootScripts/: boot_menu.py  build_driver_archive.py  detect_hardware.py  download_aggressive.py  download_all_drivers.py  driver_mapper.py  linux_injector.py  network_helper.py  opencore_injector.py  smart_downloader.py  universal_wrapper.py  windows_injector.py
DriverArchive/: README.md  (+1 more)
(+81 files in other folders)
